--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 1.0.0dev
+current_version = 1.0.0
 commit = True
 tag = True
 
@@ -7,7 +7,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:coverage_plot/__init__.py]
+[bumpversion:file:wgscovplot/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
