--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ include AUTHORS.rst
 include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
-include README.rst
+include README.md
 include wgscovplot/tmpl/amplicon_covplot_template.html
 include wgscovplot/tmpl/covplot_template.html
 
