--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,6 +4,7 @@ include LICENSE
 include README.md
 include wgscovplot/tmpl/amplicon_covplot_template.html
 include wgscovplot/tmpl/covplot_template.html
+include wgscovplot/readme/README.md
 
 recursive-include tests *
 recursive-include docs *
