--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,8 +4,10 @@ include LICENSE
 include README.md
 include wgscovplot/tmpl/amplicon_covplot_template.html
 include wgscovplot/tmpl/covplot_template.html
+include wgscovplot/tmpl/control_menu_design.html
 include wgscovplot/readme/README.md
 
+recursive-include wgscovplot/tmpl/controlmenu *.js
 recursive-include tests *
 recursive-include docs *
 recursive-exclude * __pycache__
