--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,4 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run Jest
-      run: npm test
+      uses: stefanoeb/jest-action@1.0.3
+      with:
+        jestArgs: tests/test_wgscovplot.js
