--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Run Jest
       uses: stefanoeb/jest-action@1.0.3
       with:
-        jestArgs: tests/test_wgscovplot.js
+        jestArgs: test_wgscovplot.js
