try to fix jest2

--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -13,3 +13,5 @@ jobs:
         yarn add --dev jest
     - name: Run Jest
       uses: stefanoeb/jest-action@1.0.3
+      with:
+        jestArgs: wgscovplot/tests/test_wgscovplot.js
