--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "build:js": "webpack --config webpack.config.js && cp wgscovplot/tmpl/js/wgscovplot.js tests"
+    "build:js": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
