--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.16.4",
     "babel-loader": "^8.2.3",
     "jest": "^27.3.1",
+    "lodash": "^4.17.21",
     "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1"
   }
