--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
     "babel-loader": "^8.2.3",
+    "echarts": "^5.2.2",
     "jest": "^27.3.1",
     "lodash": "^4.17.21",
     "webpack": "^5.64.3",
