--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "build:js": "webpack --config webpack.config.js",
+    "start:js": "webpack --mode development --config webpack.config.js",
+    "build:js": "webpack --mode production --config webpack.config.js",
     "test": "jest"
   },
   "repository": {
