--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "start:js": "webpack --mode development --config webpack.config.js",
-    "build:js": "webpack --mode production --config webpack.config.js",
+    "start:js": "webpack --config webpack.dev.js",
+    "build:js": "webpack --config webpack.prod.js",
     "test": "jest"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "echarts": "^5.2.2",
     "jest": "^27.3.1",
     "lodash": "^4.17.21",
+    "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.64.3",
     "webpack-cli": "^4.9.1"
   }
