--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wgscovplot",
-  "version": "1.0.0",
+  "version": "1.0.0.dev0",
   "description": "",
   "main": "wgscovplot/tmpl/wgscovplot.bundle.js",
   "directories": {
