--- a/package.json
+++ b/package.json
@@ -23,13 +23,22 @@
     "url": "https://github.com/nhhaidee/wgscovplot/issues"
   },
   "homepage": "https://github.com/nhhaidee/wgscovplot#readme",
+  "dependencies": {
+    "@popperjs/core": "^2.11.4",
+    "bootstrap": "^5.0.1",
+    "echarts": "^5.3.1",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "select2": "^4.1.0-rc.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "^8.2.3",
-    "echarts": "^5.3.1",
+    "css-loader": "^6.7.1",
+    "expose-loader": "^3.1.0",
     "jest": "^27.5.1",
-    "lodash": "^4.17.21",
+    "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
