--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -15,4 +15,4 @@ jobs:
     - name: Run Jest
       uses: stefanoeb/jest-action@1.0.3
       with:
-        jestArgs: --env=jsdom tests/wgscovplot.test.js
+        jestArgs: tests/wgscovplot.test.js
