--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -8,10 +8,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install modules
-    -  run: |
+      run: |
         yarn
         yarn add --dev jest
         yarn add --dev lodash
+        yarn run test:ci
     - name: Run Jest
       uses: stefanoeb/jest-action@1.0.3
       with:
