--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -7,13 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Install modules
+    - name: Install modules and Test
       run: |
         yarn
         yarn add --dev jest
         yarn add --dev lodash
         yarn run test:ci
-    - name: Run Jest
-      uses: stefanoeb/jest-action@1.0.3
-      with:
-        jestArgs: tests/wgscovplot.test.js
