--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,9 +2,9 @@ name: CI_Pytest
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [ master, dev_asfv ]
   pull_request:
-    branches: [ master, dev ]
+    branches: [ master, dev_asfv ]
 
 jobs:
   build:
