--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,9 +2,9 @@ name: CI_Pytest
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: [ master, dev_asfv ]
   pull_request:
-    branches: [ master, dev ]
+    branches: [ master, dev_asfv ]
 
 jobs:
   build:
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
-        pip3 install .
+        pip install .
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -35,4 +35,4 @@ jobs:
       run: |
         pwd
         ls
-        python3 -m pytest -v
+        pytest -v
