--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -2,9 +2,9 @@ name: CI_Pytest
 
 on:
   push:
-    branches: [ master, dev_asfv ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ master, dev_asfv ]
+    branches: [ master, dev ]
 
 jobs:
   build:
@@ -35,8 +35,4 @@ jobs:
       run: |
         pwd
         ls
-<<<<<<< HEAD
         pytest -v
-=======
-        python3 -m pytest -v
->>>>>>> 3261a2c8dee417df9613cf70bdcc905b0ad9be36
