--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       # PRs to the repo master branch are only ok if coming from the repo `dev` or any `patch` branches
       - name: Check PRs
-        if: github.repository == 'nhhaidee/sequencing_coverage_plot'
+        if: github.repository == 'nhhaidee/wgscovplot'
         run: |
-          { [[ ${{github.event.pull_request.head.repo.full_name}} == nhhaidee/sequencing_coverage_plot ]] && [[ $GITHUB_HEAD_REF = "dev" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]]
+          { [[ ${{github.event.pull_request.head.repo.full_name}} == nhhaidee/wgscovplot ]] && [[ $GITHUB_HEAD_REF = "dev" ]]; } || [[ $GITHUB_HEAD_REF == "patch" ]]
       # If the above check failed, post a comment on the PR explaining the failure
       # NOTE - this doesn't currently work if the PR is coming from a fork, due to limitations in GitHub actions secrets
       - name: Post PR comment
