--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,12 +2,10 @@ include CONTRIBUTING.md
 include HISTORY.md
 include LICENSE
 include README.md
-include wgscovplot/tmpl/wgscovplot_dev_template.html
-include wgscovplot/tmpl/wgscovplot_prod_template.html
-include wgscovplot/tmpl/wgscovplot_controlmenu_gui.html
 include wgscovplot/readme/README.md
 
 recursive-include wgscovplot/tmpl/js *.js
+recursive-include wgscovplot/tmpl *.html
 recursive-include src *.js
 recursive-include tests *
 recursive-include docs *
