--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -9,8 +9,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install modules and Test
       run: |
-        yarn
-        yarn add --dev jest
-        yarn add --dev lodash
-        yarn add --dev jest-environment-jsdom
-        yarn run test:ci
+        npm
+        npm add --dev jest
+        npm add --dev lodash
+        npm add --dev jest-environment-jsdom
+        npm run test:ci
