--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev:js": "webpack --config webpack.dev.js",
     "prod:js": "webpack --config webpack.prod.js",
     "test": "jest --env=jsdom",
-    "test:ci": "jest --env=jsdom"
+    "test:ci": "jest --env=jsdom",
+    "eslint_wgscovplot_js": "eslint wgscovplot ; exit 0",
+    "eslint_src": "eslint src ; exit 0"
   },
   "repository": {
     "type": "git",
@@ -37,8 +39,10 @@
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "eslint": "^8.23.0",
     "expose-loader": "^4.0.0",
     "jest": "^29.0.1",
+    "jest-environment-jsdom": "^29.0.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
