--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -5,8 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: stefanoeb/eslint-action@1.0.2
-      with:
-        files: src/
+    - name: Install packages
+      run: npm install
     - name: Run ESLint
-      run: eslint
+      run: npm run eslint_src
