--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev:js": "webpack --config webpack.dev.js",
     "prod:js": "webpack --config webpack.prod.js",
-    "test": "jest --env=jsdom",
+    "test:js": "jest --env=jsdom --config jest.config.js",
     "eslint_src": "eslint src"
   },
   "repository": {
