--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:js": "webpack --config webpack.dev.js",
     "prod:js": "webpack --config webpack.prod.js",
     "test": "jest --env=jsdom --config jest.config.js",
-    "eslint": "eslint src"
+    "eslint": "eslint src wgscovplot/tmpl/js"
   },
   "repository": {
     "type": "git",
