--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
-    "echarts": "^5.4.0-rc.1",
+    "echarts": "^5.4.0",
     "jquery": "^3.6.1",
     "lodash": "^4.17.21",
     "select2": "^4.1.0-rc.0"
