--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -41,5 +41,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: my-artifact
-        path: *.html
+        path: /*.html
 
