--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "dev:js": "webpack --config webpack.dev.js",
+    "serve": "webpack serve --config webpack.dev.js",
     "prod:js": "webpack --config webpack.prod.js",
     "test": "jest --env=jsdom --config jest.config.js",
     "eslint": "eslint src wgscovplot/tmpl/js"
@@ -37,13 +38,15 @@
     "@babel/preset-env": "^7.18.10",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
-    "eslint": "^8.23.0",
+    "eslint": "7",
     "expose-loader": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^29.0.1",
     "jest-environment-jsdom": "^29.0.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
