--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "wgscovplot",
   "version": "0.3.0",
   "description": "",
-  "main": "wgscovplot/tmpl/wgscovplot.bundle.js",
+  "main": "wgscovplot/tmpl/wgscovplot.prod.bundle.js",
   "directories": {
     "doc": "docs",
     "test": "tests"
   },
   "scripts": {
-    "dev:js": "webpack --config webpack.dev.js",
-    "serve": "webpack serve --config webpack.serve.js",
-    "prod:js": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --config webpack.dev.js",
+    "prod": "webpack --config webpack.prod.js",
     "test": "jest --env=jsdom --config jest.config.js",
     "eslint": "eslint src wgscovplot/tmpl/js"
   },
@@ -27,26 +26,27 @@
   "homepage": "https://github.com/nhhaidee/wgscovplot#readme",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.0",
-    "echarts": "^5.4.0",
-    "jquery": "^3.6.1",
+    "bootstrap": "^5.2.3",
+    "echarts": "^5.4.1",
+    "is-base64": "^1.1.0",
+    "jquery": "^3.6.3",
     "lodash": "^4.17.21",
     "select2": "^4.1.0-rc.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
-    "eslint": "7",
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.0",
+    "css-loader": "^6.7.3",
+    "eslint": "8",
     "expose-loader": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.0.1",
-    "jest-environment-jsdom": "^29.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
 }
