updates and misc fixes non-segment virus code

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,9 +3,7 @@ include HISTORY.md
 include LICENSE
 include README.md
 include wgscovplot/readme/README.md
-include wgscovplot/tmpl/js/wgscovplot.js
-include wgscovplot/tmpl/js/wgscovplot.prod.bundle.js
-include wgscovplot/tmpl/js/wgscovplot_flu.js
+include wgscovplot/tmpl/js/wgscovplot.bundle.js
 
 recursive-include wgscovplot/tmpl *.html
 recursive-include src *.js
