--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wgscovplot",
   "version": "0.4.0",
   "description": "",
-  "main": "wgscovplot/tmpl/wgscovplot.prod.bundle.js",
+  "main": "wgscovplot/tmpl/wgscovplot.bundle.js",
   "directories": {
     "doc": "docs",
     "test": "tests"
