--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@thisbeyond/solid-select": "^0.13.0",
     "echarts": "^5.4.1",
     "lodash": "^4.17.21",
-    "solid-js": "^1.6.10"
+    "solid-js": "^1.6.10",
+    "vite-plugin-css-injected-by-js": "^3.3.0"
   }
 }
