Update code (live test for segmented and non-segmented), prod for non-segmented

--- a/web/package.json
+++ b/web/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "scripts": {
     "start": "vite",
+    "start-flu": "vite -c vite.config.flu.ts",
     "dev": "vite",
-    "build": "vite build -c vite.config.dev.ts -m development",
+    "build": "vite build -c vite.config.build.ts",
     "serve": "vite preview"
   },
   "license": "MIT",
