--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: ./web/package-lock.json
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
