--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -38,3 +38,14 @@ jobs:
     - name: Build package
       run: |
           hatch build
+    - run: |
+        python -m pip install .
+    - name: Run wgscovplot on test data
+      run: |
+        wgscovplot tests/data/sars-cov-2 -o wgscovplot-sars-cov-2.html
+        wgscovplot tests/data/iav -o wgscovplot-iav.html
+    - name: Upload HTML outputs
+      uses: actions/upload-artifact@v4
+      with:
+        name: html-output-py${{ matrix.python-version }}
+        path: wgscovplot-*.html
