--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "pandas",
     'biopython',
     'bcbio-gff',
-    'pydantic',
+    'pydantic>=2.0.0',
     'jinja2',
     'edlib',
     'pysam',
