--- a/pyproject.toml
+++ b/pyproject.toml
@@ -174,6 +174,8 @@ ignore = [
     "S105", "S106", "S107",
     # Ignore complexity
     "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
+    # Ignore "Use `X | Y` for type annotations"
+    "UP007",
 ]
 unfixable = [
     # Don't touch unused imports
