fix: type hinting to support Python 3.9  (try again...)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -176,6 +176,8 @@ ignore = [
     "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
     # Ignore "Use `X | Y` for type annotations"
     "UP007",
+    # Ignore "Import from `collections.abc` instead: `Iterable`, `Mapping`, `Callable`"
+    "UP035",
 ]
 unfixable = [
     # Don't touch unused imports
